feat: add match resources
