# src/main/java/app/prog/prog3td2/model/MatchEntity.java
@@ -1,0 +1,42 @@
+package app.prog.prog3td2.model;
+
+import jakarta.persistence.Entity;
+import jakarta.persistence.FetchType;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.ManyToOne;
+import jakarta.persistence.Table;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+import java.time.LocalDate;
+
+@Entity
+@Table(name = "match")
+@AllArgsConstructor
+@NoArgsConstructor
+@Getter
+@Setter
+@Builder
+public class MatchEntity {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private int id;
+
+    @ManyToOne
+    @JoinColumn(name = "home_team_id")
+    private TeamEntity homeTeam;
+
+    @ManyToOne
+    @JoinColumn(name = "away_team_id")
+    private TeamEntity awayTeam;
+
+    private LocalDate datetime;
+
+    private String stadium;
+}
